[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Sprite/bomberbird.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Sprite/deadbomberbird.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Walker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Mutants/BomberBird/BomberBird.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 3141, 2935 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Die",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Hurt",
"speed": 6.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.1696, 28.7303 )

[node name="BomberBird" instance=ExtResource( 3 )]
script = ExtResource( 4 )
health = 3

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -4.56378 )
scale = Vector2( 0.02, 0.02 )
frames = SubResource( 2 )
animation = "Idle"
frame = 0

[node name="Collider" parent="." index="1"]
position = Vector2( -1.41741, -7.24455 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="Hitboxes" index="1"]
position = Vector2( -13.8591, -27.4033 )

[node name="BombReleaseTimer" type="Timer" parent="." index="4"]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="BombReleaseTimer" to="." method="_on_BombReleaseTimer_timeout"]
